--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ ADD TO CART
     </p>
 
             <p class="price">₹00.00</p>
-            <button class="cart-btn" onclick="addToCart('Fresh Flow', 0)">
+            <button class="cart-btn" onclick="addToCart('Product name', 0)">
 ADD TO CART
 </button>
         </div>
@@ -396,7 +396,7 @@ ADD TO CART
     </p>
 
             <p class="price">₹00.00</p>
-            <button class="cart-btn" onclick="addToCart('Fresh Flow', 0)">
+            <button class="cart-btn" onclick="addToCart('Product name', 0)">
 ADD TO CART
 </button>
         </div>
@@ -538,4 +538,5 @@ window.onload = function() {
 
 </script>
 </body>
+
 </html>
