--- a/product.html
+++ b/product.html
@@ -353,7 +353,7 @@ ADD TO CART
     </p>
             <p>Built with precision and smart engineering.</p>
             <div class="price">₹00.00</div>
-            <button class="cart-btn" onclick="addToCart('Fresh Flow', 0)">
+            <button class="cart-btn" onclick="addToCart('Product name', 0)">
 ADD TO CART
 </button>
         </div>
@@ -367,7 +367,7 @@ ADD TO CART
     </p>
             <p>Powerful performance for everyday needs.</p>
             <div class="price">₹.00</div>
-            <button class="cart-btn" onclick="addToCart('Fresh Flow', 0)">
+            <button class="cart-btn" onclick="addToCart('Product name', 0)">
 ADD TO CART
 </button>
         </div>
@@ -409,4 +409,5 @@ window.onload = function() {
 };
 </script>
 </body>
+
 </html>
